# Agentic_AI_Project_Companion

./: .gitignore  README.md  app.py  demo.db  demo_agentic_cli.py  demo_backup.db  demo_cli.py  frontend.py  import_log.txt  package.json  pyproject.toml  requirements.txt  run.py  streamlit_agentic_demo.py  streamlit_demo.py  tailwind.config.js  test.py
client/: ignore.txt  package-lock.json
client/src/: App.jsx  main.jsx
client/src/components/: MessageBubble.jsx
client/src/context/: ChatContext.jsx
client/src/hooks/: useSocket.js
client/src/layout/: DashboardLayout.jsx
client/src/pages/: GanttPage.jsx  TasksPage.jsx
project-ui/: index.html  package-lock.json  package.json  vite.config.js
project-ui/src/: App.css  App.jsx  index.css  main.jsx  theme.css
project-ui/src/components/: ChatWindow.jsx  GanttChart.jsx  KanbanBoard.jsx  ThemeToggle.jsx  chatWindow.jsx
project-ui/src/context/: ChatContext.jsx
project-ui/src/hooks/: useChatSocket.js
project-ui/src/pages/: GanttPage.jsx  HomePage.jsx  KanbanPage.jsx
src/: agentic_orchestrator.py  app.py  demo_orchestrator.py  main_agent.py  schemas.py  server.py
src/agents/: generate_gantt_plan.py  generate_plan.py  github_agent.py  idea_agent.py  orchestrator_agent.py  planner_agent.py  rag_agent.py  research_agent.py  tracker.py
src/core/: llm.py
src/database/: __init__.py  chroma_store.py  mongo_db.py  mongo_memory.py  mongo_vector_store.py  mysql_db.py  simple_db.py
src/memory/: __init__.py  demo_memory.py  memory.py
src/pages/: ChatPage.jsx  KanbanPage.jsx
src/tools/: agent_tools.py  github_analyzer.py
