[project]
name = "agentic-ai-project-companion"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.48.1,<2.0.0)",
    "langgraph (>=0.6.6,<0.7.0)",
    "google-genai (>=1.31.0,<2.0.0)",
    "groq (>=0.31.0,<0.32.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
