[project]
name = "aapc"
version = "0.1.0"
description = ""
authors = [
    {name = "Sanket Dangle",email = "sanket1537@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "google-adk (>=1.14.1,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-google-genai (>=2.1.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "google-genai (>=1.36.0,<2.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false